--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-select": "^5.2.2",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
